--- a/404.html
+++ b/404.html
@@ -1,4 +1,8 @@
-<script src="https://amicitia.github.io/js/jquery-3.3.1.min.js"></script>
+<!doctype html>
+<html>
+	<head>
+    <link rel='shortcut icon' href='https://amicitia.github.io/images/favicon.png' type='image/x-icon' />
+    <meta charset="utf-8"><title>Amicitia - 404</title><script src="https://amicitia.github.io/js/jquery-3.3.1.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/4c3075832a.js" crossorigin="anonymous"></script>
 <script data-ad-client="ca-pub-9519592525056753" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -11,7 +15,128 @@
 <script type="text/javascript" src="https://amicitia.github.io/js/FeedEk.min.js"></script>
 <script type="text/javascript" src="https://amicitia.github.io/js/jscolor.js"></script>
 <link rel="stylesheet" href="https://amicitia.github.io/css/css3menu.css" type="text/css" />
-<style type="text/css">._css3m {display: none;}</style>				</td>
+<style type="text/css">._css3m {display: none;}</style></head><body style="background: linear-gradient(120deg, var(--gradient1) 0%, var(--gradient2) 100%) fixed;">
+    <!--Copied Message-->
+    <div class="copied">Copied to Clipboard</div>
+    <div class="flex">
+        <!--TopRow-->
+        <div class="row top">
+            <!--Navbar-->
+            <div class="navbar">
+                <input type="checkbox" id="css3menu-switcher" class="c3m-switch-input">
+                <ul id="css3menu0" class="topmenu">
+                    <li class="switch"><label onclick="" for="css3menu-switcher"></label></li>
+                    <li class="topmenu"><a href="https://shrinefox.com" style="height:37px;line-height:37px;"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+                    <li class="toproot">
+                        <a style="height:37px;line-height:37px;"><span><i class="fa fa-cube" aria-hidden="true"></i> Resources <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
+                        <ul>
+                            <li><a href="https://amicitia.github.io"><i class="fa fa-download" aria-hidden="true"></i> Browse Mods & Tools</a></li>
+                            <li><a href="https://shrinefox.com/PatchCreator"><i class="fa fa-check-square" aria-hidden="true"></i> RPCS3 Patch Creator</a></li>
+                            <li><a href="https://shrinefox.com/UpdateCreator"><i class="fa fa-check-square" aria-hidden="true"></i> PS4 Patch Creator</a></li>
+                            <li><a href="https://shrinefox.com/textsearch"><i class="fab fa-searchengin" aria-hidden="true"></i> Text Search</a></li>
+                            <li><a href="https://amicitia.github.io/files"><i class="fa fa-folder-open" aria-hidden="true"></i> Files</a></li>
+                            <li><a href="https://amicitia.github.io/docs/flowscript"><i class="fa fa-file-code" aria-hidden="true"></i> Flowscript Docs</a></li>
+                        </ul>
+                    </li>
+                    <li class="toproot">
+                        <a style="height:37px;line-height:37px;"><span><i class="fa fa-users" aria-hidden="true"></i> Community <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
+                        <ul>
+                            <li><a href="https://shrinefox.com/forum"><i class="fa fa-comments" aria-hidden="true"></i> Forum</a></li>
+                            <li><a href="https://shrinefox.com/wiki"><i class="fa fa-book" aria-hidden="true"></i> Wiki</a></li>
+                            <li><a href="https://discord.gg/9USHGmB"><i class="fab fa-discord" aria-hidden="true"></i> Discord</a></li>
+                        </ul>
+                    </li>
+                    <li class="toproot">
+                        <a id="sidebartoggle" style="height:20px;"><span><i class="fa fa-user-circle"></i> Profile <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
+                        <ul style="padding: 0 !important; -webkit-box-shadow: none !important; box-shadow: none !important; ">
+                            <li>
+                                <div class="sidebar">
+                                    <div class="component">
+                                        <div class="contents">
+                                            <!--Notifications-->
+                                            <a href="https://shrinefox.com/forum/ucp.php">
+                                                <div class="item">
+                                                    <i class="fa fa-address-card"></i> &nbsp;Account Settings
+                                                </div>
+                                            </a>
+                                            <a href="https://shrinefox.com/forum/ucp.php?i=pm&folder=inbox">
+                                                <div class="item">
+                                                    <i class="fa fa-envelope"></i> &nbsp;Inbox
+                                                </div>
+                                            </a>
+                                            <a href="https://shrinefox.com/forum/search.php">
+                                                <div class="item">
+                                                    <i class="fa fa-search"></i> &nbsp;Search
+                                                </div>
+                                            </a>
+                                            <a href="https://shrinefox.com/forum/search.php?search_id=egosearch">
+                                                <div class="item">
+                                                    <i class="fa fa-sticky-note"></i> &nbsp;Your Posts
+                                                </div>
+                                            </a>
+                                            <a href="https://shrinefox.com/forum/search.php?search_id=active_topics">
+                                                <div class="item">
+                                                    <i class="fa fa-star"></i> &nbsp;Active Threads
+                                                </div>
+                                            </a>
+                                        </div> <!--End Contents-->
+                                    </div> <!--End Component-->
+                                </div> <!--End Sidebar-->
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="toproot">
+                        <a style="height:37px;line-height:37px;"><span><i class="fa fa-question-circle" aria-hidden="true"></i> About <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
+                        <ul>
+                            <li><a href="https://shrinefox.com/forum/app.php/faqpage"><i class="fa fa-comment-dots" aria-hidden="true"></i> FAQs</a></li>
+                            <li><a href="https://shrinefox.com/about"><i class="fa fa-address-book" aria-hidden="true"></i> Credits</a></li>
+                            <li><a href="https://youtube.com/c/ShrineFox"><i class="fab fa-youtube" aria-hidden="true"></i> YouTube</a></li>
+                            <li><a href="https://twitter.com/AmicitiaTeam"><i class="fab fa-twitter" aria-hidden="true"></i> Twitter</a></li>
+                        </ul>
+                    </li>
+                    <li class="toproot">
+                        <a style="height:37px;line-height:37px;"><span><i class="fa fa-newspaper" aria-hidden="true"></i> Articles <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
+                        <ul>
+                            <li><a href="https://shrinefox.com/news"><i class="fa fa-newspaper" aria-hidden="true"></i> News</a></li>
+                            <li><a href="https://shrinefox.com/guides"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Guides</a></li>
+                            <li><a href="https://shrinefox.com"><i class="fab fa-wordpress" aria-hidden="true"></i> Blog</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!--Header-->
+            <div class="header">
+                <canvas id="bgCanvas" width="715" height="722" style=""></canvas>
+                <div class="header-inner">
+                    <!--Title--><center><a href="https://amicitia.github.io"><img src="https://amicitia.github.io/images/logo.svg" style="width:150px;height:150px;"><h1>404</h1></a></center>            <!--Waves-->
+    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+        <defs>
+            <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+        </defs>
+        <g class="parallax">
+            <use xlink:href="#gentle-wave" x="48" y="0"></use>
+            <use xlink:href="#gentle-wave" x="48" y="3"></use>
+            <use xlink:href="#gentle-wave" x="48" y="5"></use>
+            <use xlink:href="#gentle-wave" x="48" y="7"></use>
+        </g>
+    </svg>
+</div>
+<!--Waves End-->
+<!--Header End-->
+    </div>
+<!--Navbar End-->
+</div>
+<!--Top End-->
+<!--Middle-->
+<div class="row middle">
+    <!--Page Body-->
+    <div class="content">
+        <div class="wrap">
+            <!--Main Page Content-->
+            <table id="wrap">
+                <tr>
+                    <td style="vertical-align:top;">
+                        <b><a href="https://shrinefox.com/"><i class="fa fa-home" aria-hidden="true"></i> ShrineFox.com</a> > Resources > <a href="https://amicitia.github.io">Browse Mods & Tools</a> > Not Found</b><br><br><br><center><a href="https://www.youtube.com/watch?v=FZ0cqpXL9EE&amp;list=PLU6By7bu-RSvtk9aDlYplr73lfwpT2fFM&amp;index=1"><img src="https://amicitia.github.io/images/404.jpg"></a><br><br><b><a href="https://amicitia.github.io/">Go Back</a></b></center>				</td>
 				<!--Sidebar-->
                 <td style="vertical-align:top;width:20%;text-align:right;font-size:10pt;" class="bloglinks">
 					<b>LATEST UPDATES</b>
@@ -51,8 +176,7 @@
 							DateFormat: 'MMM d',
 							DateFormatLang:'en'
 						});
-                    </script><center><a href="https://www.youtube.com/watch?v=FZ0cqpXL9EE&amp;list=PLU6By7bu-RSvtk9aDlYplr73lfwpT2fFM&amp;index=1"><img src="https://amicitia.github.io/images/404.jpg" alt="yes of course I'm shilling vinesauce"></a></center>
-					<br>								<!--Pagination-->
+                    </script>								<!--Pagination-->
                                 </td>
 							</tr>
 						</table>
