--- a/files.html
+++ b/files.html
@@ -47,7 +47,9 @@
                         </ul>
                     </li>
                     <li class="toproot" style="margin-left: 10px; position: relative;">
-                        <a id="sidebartoggle" style="height:20px;"><span><i class="fa fa-user-circle"></i> Profile <i class="fas fa-chevron-down" style="font-size: 6pt;"></i></span></a>
+                        <a id="sidebartoggle">
+                            <i class="fa fa-user-circle"></i> Profile
+                        </a>
                         <ul style="padding: 0 !important; -webkit-box-shadow: none !important; box-shadow: none !important; ">
                             <div>
                                 <div class="sidebar">
@@ -187,7 +189,7 @@
             <td><a href="https://drive.google.com/open?id=1Y1LCy8lbG72k_8wdGQGgB5EqTgQ1zxjL">DATA.CPK</a></td>
         </tr>
         <tr style="background-color: var(--highlight);">
-            <td></td>
+            <td>Persona 4 Golden</td>
             <td>PC</td>
             <td><a href="https://drive.google.com/drive/folders/1jfx8VgIT8B7taKo_TTQ6aE27BOAmFRgC">DATA.CPK</a>, <a href="https://drive.google.com/drive/folders/1kyYQ3nF6BSw3K9oOBh6CIlVZE7qauMyX">MOVIE.CPK</a>, <a href="https://drive.google.com/drive/folders/1QV8ORuNv5Zp8LRAAzS7erCi29fvHjiUd?usp=sharing">SND</a></td>
         </tr>
@@ -232,7 +234,7 @@
 <table>
     <tbody>
         <tr>
-            <td>Devil Summoner: Raidou Kuzunoha vs. the Soulless Army</td>
+            <td>Devil Summoner: Raidou Kuzunoha vs The Soulless Army</td>
             <td>PS2</td>
             <td><a href="https://drive.google.com/file/d/1wtMYXb6DJIJc8vjB2KrH6Mqqug4ABv6R/view?usp=sharing">Data</a></td>
         </tr>
